// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`help should show help information and respect the "--color" flag using the "--help" option 1`] = `
"[1mUsage:[22m webpack [entries...] [options]
[1mAlternative usage to run commands:[22m webpack [command] [options]

The build tool for modern web applications.

[1mOptions:[22m
  -c, --config <value...>                    Provide path to a webpack configuration file e.g. ./webpack.config.js.
  --config-name <value...>                   Name of the configuration to use.
  -m, --merge                                Merge two or more configurations using 'webpack-merge'.
  --env <value...>                           Environment passed to the configuration when it is a function.
  --node-env <value>                         Sets process.env.NODE_ENV to the specified value.
  --progress [value]                         Print compilation progress during build.
  -j, --json [value]                         Prints result as JSON or store it in a file.
  -d, --devtool <value>                      Determine source maps to use.
  --no-devtool                               Do not generate source maps.
  --entry <value...>                         The entry point(s) of your application e.g. ./src/main.js.
  --mode <value>                             Defines the mode to pass to webpack.
  --name <value>                             Name of the configuration. Used when loading multiple configurations.
  -o, --output-path <value>                  Output location of the file generated by webpack e.g. ./dist/.
  --stats [value]                            It instructs webpack on how to treat the stats e.g. verbose.
  --no-stats                                 Disable stats output.
  -t, --target <value...>                    Sets the build target e.g. node.
  -w, --watch                                Watch for files changes.
  --no-watch                                 Do not watch for file changes.
  --watch-options-stdin                      Stop watching when stdin stream has ended.
  --no-watch-options-stdin                   Do not stop watching when stdin stream has ended.

[1mGlobal options:[22m
  --color                                    Enable colors on console.
  --no-color                                 Disable colors on console.
  -v, --version                              Output the version number of 'webpack', 'webpack-cli' and 'webpack-dev-server' and commands.
  -h, --help [verbose]                       Display help for commands and options.

[1mCommands:[22m
  build|bundle|b [entries...] [options]      Run webpack (default command, can be omitted).
  configtest|t [config-path]                 Validate a webpack configuration.
  help|h [command] [option]                  Display help for commands and options.
  info|i [options]                           Outputs information about your system.
  init|c [scaffold...] [options]             Initialize a new webpack configuration.
  loader|l [output-path]                     Scaffold a loader.
  migrate|m <config-path> [new-config-path]  Migrate a configuration to a new version.
  plugin|p [output-path]                     Scaffold a plugin.
  serve|s [entries...] [options]             Run the webpack dev server.
  version|v [commands...]                    Output the version number of 'webpack', 'webpack-cli' and 'webpack-dev-server' and commands.
  watch|w [entries...] [options]             Run webpack and watch for files changes.

To see list of all supported commands and options run 'webpack --help=verbose'.

[1mWebpack documentation:[22m https://webpack.js.org/.
[1mCLI documentation:[22m https://webpack.js.org/api/cli/.
[1mMade with ♥ by the webpack team[22m."
`;

exports[`help should show help information and respect the "--no-color" flag using the "--help" option 1`] = `
"Usage: webpack [entries...] [options]
Alternative usage to run commands: webpack [command] [options]

The build tool for modern web applications.

Options:
  -c, --config <value...>                    Provide path to a webpack configuration file e.g. ./webpack.config.js.
  --config-name <value...>                   Name of the configuration to use.
  -m, --merge                                Merge two or more configurations using 'webpack-merge'.
  --env <value...>                           Environment passed to the configuration when it is a function.
  --node-env <value>                         Sets process.env.NODE_ENV to the specified value.
  --progress [value]                         Print compilation progress during build.
  -j, --json [value]                         Prints result as JSON or store it in a file.
  -d, --devtool <value>                      Determine source maps to use.
  --no-devtool                               Do not generate source maps.
  --entry <value...>                         The entry point(s) of your application e.g. ./src/main.js.
  --mode <value>                             Defines the mode to pass to webpack.
  --name <value>                             Name of the configuration. Used when loading multiple configurations.
  -o, --output-path <value>                  Output location of the file generated by webpack e.g. ./dist/.
  --stats [value]                            It instructs webpack on how to treat the stats e.g. verbose.
  --no-stats                                 Disable stats output.
  -t, --target <value...>                    Sets the build target e.g. node.
  -w, --watch                                Watch for files changes.
  --no-watch                                 Do not watch for file changes.
  --watch-options-stdin                      Stop watching when stdin stream has ended.
  --no-watch-options-stdin                   Do not stop watching when stdin stream has ended.

Global options:
  --color                                    Enable colors on console.
  --no-color                                 Disable colors on console.
  -v, --version                              Output the version number of 'webpack', 'webpack-cli' and 'webpack-dev-server' and commands.
  -h, --help [verbose]                       Display help for commands and options.

Commands:
  build|bundle|b [entries...] [options]      Run webpack (default command, can be omitted).
  configtest|t [config-path]                 Validate a webpack configuration.
  help|h [command] [option]                  Display help for commands and options.
  info|i [options]                           Outputs information about your system.
  init|c [scaffold...] [options]             Initialize a new webpack configuration.
  loader|l [output-path]                     Scaffold a loader.
  migrate|m <config-path> [new-config-path]  Migrate a configuration to a new version.
  plugin|p [output-path]                     Scaffold a plugin.
  serve|s [entries...] [options]             Run the webpack dev server.
  version|v [commands...]                    Output the version number of 'webpack', 'webpack-cli' and 'webpack-dev-server' and commands.
  watch|w [entries...] [options]             Run webpack and watch for files changes.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using command syntax 1`] = `
"Usage: webpack [entries...] [options]
Alternative usage to run commands: webpack [command] [options]

The build tool for modern web applications.

Options:
  -c, --config <value...>                    Provide path to a webpack configuration file e.g. ./webpack.config.js.
  --config-name <value...>                   Name of the configuration to use.
  -m, --merge                                Merge two or more configurations using 'webpack-merge'.
  --env <value...>                           Environment passed to the configuration when it is a function.
  --node-env <value>                         Sets process.env.NODE_ENV to the specified value.
  --progress [value]                         Print compilation progress during build.
  -j, --json [value]                         Prints result as JSON or store it in a file.
  -d, --devtool <value>                      Determine source maps to use.
  --no-devtool                               Do not generate source maps.
  --entry <value...>                         The entry point(s) of your application e.g. ./src/main.js.
  --mode <value>                             Defines the mode to pass to webpack.
  --name <value>                             Name of the configuration. Used when loading multiple configurations.
  -o, --output-path <value>                  Output location of the file generated by webpack e.g. ./dist/.
  --stats [value]                            It instructs webpack on how to treat the stats e.g. verbose.
  --no-stats                                 Disable stats output.
  -t, --target <value...>                    Sets the build target e.g. node.
  -w, --watch                                Watch for files changes.
  --no-watch                                 Do not watch for file changes.
  --watch-options-stdin                      Stop watching when stdin stream has ended.
  --no-watch-options-stdin                   Do not stop watching when stdin stream has ended.

Global options:
  --color                                    Enable colors on console.
  --no-color                                 Disable colors on console.
  -v, --version                              Output the version number of 'webpack', 'webpack-cli' and 'webpack-dev-server' and commands.
  -h, --help [verbose]                       Display help for commands and options.

Commands:
  build|bundle|b [entries...] [options]      Run webpack (default command, can be omitted).
  configtest|t [config-path]                 Validate a webpack configuration.
  help|h [command] [option]                  Display help for commands and options.
  info|i [options]                           Outputs information about your system.
  init|c [scaffold...] [options]             Initialize a new webpack configuration.
  loader|l [output-path]                     Scaffold a loader.
  migrate|m <config-path> [new-config-path]  Migrate a configuration to a new version.
  plugin|p [output-path]                     Scaffold a plugin.
  serve|s [entries...] [options]             Run the webpack dev server.
  version|v [commands...]                    Output the version number of 'webpack', 'webpack-cli' and 'webpack-dev-server' and commands.
  watch|w [entries...] [options]             Run webpack and watch for files changes.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "--help" option 1`] = `
"Usage: webpack [entries...] [options]
Alternative usage to run commands: webpack [command] [options]

The build tool for modern web applications.

Options:
  -c, --config <value...>                    Provide path to a webpack configuration file e.g. ./webpack.config.js.
  --config-name <value...>                   Name of the configuration to use.
  -m, --merge                                Merge two or more configurations using 'webpack-merge'.
  --env <value...>                           Environment passed to the configuration when it is a function.
  --node-env <value>                         Sets process.env.NODE_ENV to the specified value.
  --progress [value]                         Print compilation progress during build.
  -j, --json [value]                         Prints result as JSON or store it in a file.
  -d, --devtool <value>                      Determine source maps to use.
  --no-devtool                               Do not generate source maps.
  --entry <value...>                         The entry point(s) of your application e.g. ./src/main.js.
  --mode <value>                             Defines the mode to pass to webpack.
  --name <value>                             Name of the configuration. Used when loading multiple configurations.
  -o, --output-path <value>                  Output location of the file generated by webpack e.g. ./dist/.
  --stats [value]                            It instructs webpack on how to treat the stats e.g. verbose.
  --no-stats                                 Disable stats output.
  -t, --target <value...>                    Sets the build target e.g. node.
  -w, --watch                                Watch for files changes.
  --no-watch                                 Do not watch for file changes.
  --watch-options-stdin                      Stop watching when stdin stream has ended.
  --no-watch-options-stdin                   Do not stop watching when stdin stream has ended.

Global options:
  --color                                    Enable colors on console.
  --no-color                                 Disable colors on console.
  -v, --version                              Output the version number of 'webpack', 'webpack-cli' and 'webpack-dev-server' and commands.
  -h, --help [verbose]                       Display help for commands and options.

Commands:
  build|bundle|b [entries...] [options]      Run webpack (default command, can be omitted).
  configtest|t [config-path]                 Validate a webpack configuration.
  help|h [command] [option]                  Display help for commands and options.
  info|i [options]                           Outputs information about your system.
  init|c [scaffold...] [options]             Initialize a new webpack configuration.
  loader|l [output-path]                     Scaffold a loader.
  migrate|m <config-path> [new-config-path]  Migrate a configuration to a new version.
  plugin|p [output-path]                     Scaffold a plugin.
  serve|s [entries...] [options]             Run the webpack dev server.
  version|v [commands...]                    Output the version number of 'webpack', 'webpack-cli' and 'webpack-dev-server' and commands.
  watch|w [entries...] [options]             Run webpack and watch for files changes.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help --color" option 1`] = `
"[1mUsage[22m: webpack --color
[1mDescription:[22m Enable colors on console.

To see list of all supported commands and options run 'webpack --help=verbose'.

[1mWebpack documentation:[22m https://webpack.js.org/.
[1mCLI documentation:[22m https://webpack.js.org/api/cli/.
[1mMade with ♥ by the webpack team[22m."
`;

exports[`help should show help information using the "help --mode" option 1`] = `
"Usage: webpack --mode <value>
Description: Defines the mode to pass to webpack.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help --mode" option 2`] = `
"Usage: webpack --mode <value>
Description: Defines the mode to pass to webpack.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help --no-color" option 1`] = `
"Usage: webpack --no-color
Description: Disable colors on console.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help --no-stats" option 1`] = `
"Usage: webpack --no-stats
Description: Disable stats output.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help --stats" option 1`] = `
"Usage: webpack --stats [value]
Description: It instructs webpack on how to treat the stats e.g. verbose.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help --version" option 1`] = `
"Usage: webpack --version
Short: webpack -v
Description: Output the version number of 'webpack', 'webpack-cli' and 'webpack-dev-server' and commands.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help -v" option 1`] = `
"Usage: webpack --version
Short: webpack -v
Description: Output the version number of 'webpack', 'webpack-cli' and 'webpack-dev-server' and commands.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help serve --color" option 1`] = `
"[1mUsage[22m: webpack serve --color
[1mDescription:[22m Enable colors on console.

To see list of all supported commands and options run 'webpack --help=verbose'.

[1mWebpack documentation:[22m https://webpack.js.org/.
[1mCLI documentation:[22m https://webpack.js.org/api/cli/.
[1mMade with ♥ by the webpack team[22m."
`;

exports[`help should show help information using the "help serve --mode" option 1`] = `
"Usage: webpack serve --mode <value>
Description: Defines the mode to pass to webpack.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;

exports[`help should show help information using the "help serve --no-color" option 1`] = `
"Usage: webpack serve --no-color
Description: Disable colors on console.

To see list of all supported commands and options run 'webpack --help=verbose'.

Webpack documentation: https://webpack.js.org/.
CLI documentation: https://webpack.js.org/api/cli/.
Made with ♥ by the webpack team."
`;
